--- a/index.html
+++ b/index.html
@@ -309,14 +309,14 @@
 						<span class="position">Varma's Kothamangalam, India</span>
 						<p class="mt-4">Varma's established its presence in audio market segments such as automotive entertainment, home audio, multi entertainment concept & DJs in Kerala, Tamilnadu &amp; Karnataka.
 							<ul>
-		<li>Coordinated daily administrative tasks including work scheduling, filing, and managing office supplies across R&D, Manufacturing, Service Centre, and Route Service departments.</li>
-								<li>Oversaw all departmental correspondence and phone interactions.</li>
-								<li>Compiled and edited reports for accurate internal and external communication.</li>
-								<li>Streamlined employee onboarding procedures for improved integration efficiency.</li>
-								<li>Facilitated company meetings and coordination.</li>
-								<li>Analyzed Service Centre and Route Service department data using Power BI and Excel to evaluate performance and complaint ratios</li>
-								<li>Generated analytical insights by tracking data trends across departments</li>
-								<li>Optimized product manufacturing costs through effective evaluation of supplier pricing.</li>
+		<li>Led cross-functional administrative and data initiatives across R&D, Manufacturing, Service Centre, and Route Service departments, driving process improvements and strategic decision-making.</li>
+		<li>Managed end-to-end administrative operations including workforce scheduling, resource allocation, and interdepartmental coordination, significantly improving workflow efficiency.</li>
+	        <li>Designed and implemented streamlined onboarding workflows, reducing new employee integration time by 30%.</li>
+		<li>Leveraged Power BI and Excel to analyze departmental performance data, identifying trends in customer complaints, response times, and technician productivity, which enhanced service quality.
+		<li>Created interactive dashboards and reports providing real-time insights to department heads, facilitating informed decisions.</li>
+		<li>Prepared detailed reports for internal and external stakeholders, promoting data transparency and alignment.</li>
+		<li>Conducted supplier pricing analysis leading to a 10% reduction in manufacturing procurement costs.</li>
+		<li>Facilitated cross-departmental meetings, combining administrative oversight with data insights to support continuous operational improvements.</li>
 								
 							</ul>
 						</p>
