--- a/index.html
+++ b/index.html
@@ -399,6 +399,19 @@
 		<br>
 
 		<div class="row">
+    <!-- First row with 2 columns -->
+    <div class="col-md-6">
+        <div class="resume-wrap ftco-animate">
+            <span class="date">July 2025</span>
+            <h2>Microsoft Power BI Data Analyst Certificate</h2>
+            <span class="position">Coursera</span>
+            <p class="mt-4">
+                <a href="https://coursera.org/verify/professional-cert/RAKY2G73XR1L" target="_blank">
+                    View Certificate
+                </a>
+            </p>
+        </div>
+    </div>
     <div class="col-md-6">
         <div class="resume-wrap ftco-animate">
             <span class="date">July 2021 - March 2022</span>
@@ -407,7 +420,10 @@
             <p class="mt-4">100% scholarship from K-DISC</p>
         </div>
     </div>
+</div>
 
+<div class="row mt-4">
+    <!-- Second row with 2 columns -->
     <div class="col-md-6">
         <div class="resume-wrap ftco-animate">
             <span class="date">2009 - 2011</span>
@@ -416,11 +432,8 @@
             <p class="mt-4">CGPA: 8.2</p>
         </div>
     </div>
-</div>
-
-<div class="row justify-content-center mt-4">
     <div class="col-md-6">
-        <div class="resume-wrap ftco-animate text-center">
+        <div class="resume-wrap ftco-animate">
             <span class="date">2005 - 2009</span>
             <h2>Bachelor's Degree in Electronics &amp; Communication Engineering (AMIE)</h2>
             <span class="position">Institution of Engineers (India)</span>
@@ -428,6 +441,7 @@
         </div>
     </div>
 </div>
+
 
 		    		<div class="row justify-content-center mt-5">
   <div class="col-md-6 text-center ftco-animate">
