--- a/index.html
+++ b/index.html
@@ -402,12 +402,12 @@
     <!-- First row with 2 columns -->
     <div class="col-md-6">
         <div class="resume-wrap ftco-animate">
-            <span class="date">July 2025</span>
+            <span class="date">July 29, 2025</span>
             <h2>Microsoft Power BI Data Analyst Certificate</h2>
             <span class="position">Coursera</span>
             <p class="mt-4">
                 <a href="https://coursera.org/verify/professional-cert/RAKY2G73XR1L" target="_blank">
-                    View Certificate
+                    Verify Certificate
                 </a>
             </p>
         </div>
