--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 	          	</div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
-		          		<span class="subheading">Hello!</span>
+		          		<span class="subheading" style="display:block; margin-top:60px;">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span> SUMAYYA </span></h1>
 						<h2> From Chaos to Clarity -</h2>
 						<h2>	Explore My Data-Driven World.</h2>
