--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
     <!-- Second row with 2 columns -->
     <div class="col-md-6">
         <div class="resume-wrap ftco-animate">
-            <span class="date">2009 - 2011</span>
+            <span class="date">June 2009 - April 2011</span>
             <h2>M.Tech in Applied Electronics</h2>
             <span class="position">Karunya University, Coimbatore, India</span>
             <p class="mt-4">CGPA: 8.2</p>
@@ -426,7 +426,7 @@
     </div>
     <div class="col-md-6">
         <div class="resume-wrap ftco-animate">
-            <span class="date">2005 - 2009</span>
+            <span class="date">June 2005 - May 2009</span>
             <h2>Bachelor's Degree in Electronics &amp; Communication Engineering (AMIE)</h2>
             <span class="position">Institution of Engineers (India)</span>
             <p class="mt-4">CGPA: 8.1</p>
