--- a/index.html
+++ b/index.html
@@ -304,7 +304,31 @@
 			<div class="underline"></div>
 		</div>
 		<br>
-		
+		<div class="col-md-6">
+						<div class="resume-wrap ftco-animate">
+							<span class="date">Nov 2024- Present</span>
+							<h2>Freelancer</h2>
+							<span class="position">RWS Platform</span>
+							<p class="mt-4">AI Data service Provider.
+								<ul>
+			
+									<li>  PROJECT 1</li>
+										  -Meta AI OCR Annotation (Batch 4).
+									<lI>  -Marked and labeled text in images using OCR tools.</li>
+									<li>  PROJECT 2</li>
+										 -META AI Infra - MT Benchmark XSTS Evaluation
+									    <li>  Conducted human evaluations for assessing semantic similarity in sentence pairs.</li>
+								    <li>  PROJECT 3</li>
+										  -MT Benchmark XSTS Evaluation EN Calibration
+										<li>  Conducted human evaluations for assessing semantic similarity in English sentence pairs.</li>
+									 <li>  PROJECT 4</li>
+										  -Diamond Project
+										<li>  Data annotation project: tasks of pairwise comparisons, counting tasks, object tagging tasks including audio, video or images as content or data collected,</li>
+								</ul>
+							</p>
+						</div>
+	
+					</div>
 		<div class="row">
 				<div class="col-md-6">
 					<div class="resume-wrap ftco-animate">
@@ -327,28 +351,7 @@
 					</div>
 
 				</div>
-					<div class="col-md-6">
-						<div class="resume-wrap ftco-animate">
-							<span class="date">Nov 2024- Mar 2025</span>
-							<h2>Freelancer</h2>
-							<span class="position">RWS Platform</span>
-							<p class="mt-4">AI Data service Provider.
-								<ul>
-			
-									<li>  PROJECT 1</li>
-										  -Meta AI OCR Annotation (Batch 4).
-									<lI>  -Marked and labeled text in images using OCR tools.</li>
-									<li>  PROJECT 2</li>
-										 -META AI Infra - MT Benchmark XSTS Evaluation
-									    <li>  Conducted human evaluations for assessing semantic similarity in sentence pairs.</li>
-								    <li>  PROJECT 3</li>
-										  -MT Benchmark XSTS Evaluation EN Calibration
-										<li>  Conducted human evaluations for assessing semantic similarity in English sentence pairs.</li>
-								</ul>
-							</p>
-						</div>
-	
-					</div>
+					
 				
 			<div class="col-md-6">
 				<div class="resume-wrap ftco-animate">
