--- a/index.html
+++ b/index.html
@@ -305,9 +305,10 @@
 		</div>
 		<br>
 		<div class="container">
+<div class="container">
 
   <!-- Row 1: Freelancer + Administration Head -->
-  <div class="row justify-content-center">
+  <div class="row">
     <!-- Freelancer -->
     <div class="col-md-6">
       <div class="resume-wrap ftco-animate">
@@ -330,7 +331,10 @@
         <span class="date">Mar 2021 - Mar 2025</span>
         <h2>Administration Head cum Data Analyst</h2>
         <span class="position">Varma's, Kothamangalam, India</span>
-        <p class="mt-4">Varma's established its presence in audio market segments such as automotive entertainment, home audio, multi entertainment concept & DJs in Kerala, Tamil Nadu & Karnataka.</p>
+        <p class="mt-4">
+          Varma's established its presence in audio market segments such as automotive entertainment,
+          home audio, multi entertainment concept & DJs in Kerala, Tamil Nadu & Karnataka.
+        </p>
         <ul>
           <li>Coordinated daily administrative tasks including work scheduling, filing, and managing office supplies across multiple departments.</li>
           <li>Managed workforce scheduling, resource allocation, and onboarding workflows, reducing integration time by 30%.</li>
@@ -345,8 +349,8 @@
 
   <!-- Row 2: Assistant Professor (Centered) -->
   <div class="row justify-content-center mt-5">
-    <div class="col-md-6 text-center">
-      <div class="resume-wrap ftco-animate">
+    <div class="col-md-6">
+      <div class="resume-wrap ftco-animate text-center">
         <span class="date">May 2011 - Feb 2012</span>
         <h2>Assistant Professor in ECE Department</h2>
         <span class="position">Jawaharlal College of Engineering & Technology, Kerala, India</span>
@@ -359,7 +363,6 @@
 
 </div>
 
-		
 
 		<br>
 		<br>
