--- a/index.html
+++ b/index.html
@@ -375,6 +375,18 @@
 
 		<div class="row">
     <!-- First row with 2 columns -->
+			  <div class="col-md-6">
+        <div class="resume-wrap ftco-animate">
+            <span class="date">January 14, 2026</span>
+            <h2>Microsoft Certified: Data Analyst Associate (PL 300)</h2>
+            <span class="position">Microsoft</span>
+            <p class="mt-4">
+                <a href="https://learn.microsoft.com/api/credentials/share/en-us/SUMISHAJAHAN-0344/E893443AAA4C16F3?sharingId=E1ECFB13231BB9A2">
+                    Verify Certificate
+                </a>
+            </p>
+        </div>
+    </div>
     <div class="col-md-6">
         <div class="resume-wrap ftco-animate">
             <span class="date">July 29, 2025</span>
