--- a/index.html
+++ b/index.html
@@ -372,6 +372,20 @@
 			<div class="underline"></div>
 		</div>
 		<br>
+			<div class="row mt-4">
+	<div class="col-md-6">
+		<div class="resume-wrap">
+			<span class="date">January 14, 2026</span>
+			<h2>Microsoft Certified: Data Analyst Associate (PL 300)</h2>
+			<span class="position">Microsoft</span>
+			<p class="mt-4">
+				<a href="https://learn.microsoft.com/api/credentials/share/en-us/SUMISHAJAHAN-0344/E893443AAA4C16F3">
+					Verify Certificate
+				</a>
+			</p>
+		</div>
+	</div>
+</div>
 
 		<div class="row">
     <!-- First row with 2 columns -->
