--- a/index.html
+++ b/index.html
@@ -372,36 +372,36 @@
 			<div class="underline"></div>
 		</div>
 		<br>
-			<div class="row mt-4">
-	<div class="col-md-6">
-		<div class="resume-wrap">
-			<span class="date">January 14, 2026</span>
-			<h2>Microsoft Certified: Data Analyst Associate (PL 300)</h2>
-			<span class="position">Microsoft</span>
-			<p class="mt-4">
-				<a href="https://learn.microsoft.com/api/credentials/share/en-us/SUMISHAJAHAN-0344/E893443AAA4C16F3">
-					Verify Certificate
-				</a>
-			</p>
-		</div>
-	</div>
-</div>
+		<!-- ROW 1 : 3 items -->
+<div class="row mt-4">
 
-		  <div class="col-md-6">
+    <div class="col-md-4">
         <div class="resume-wrap ftco-animate">
-            <span class="date">July 29, 2025</span>
-            <h2>Microsoft Power Bi Data Analyst </h2>
-            <span class="position">Coursera</span>
+            <span class="date">January 14, 2026</span>
+            <h2>Microsoft Certified: Data Analyst Associate (PL 300)</h2>
+            <span class="position">Microsoft</span>
             <p class="mt-4">
-				<a href="https://www.coursera.org/account/accomplishments/professional-cert/RAKY2G73XR1L>
-					Verify Certificate
+                <a href="https://learn.microsoft.com/api/credentials/share/en-us/SUMISHAJAHAN-0344/E893443AAA4C16F3" target="_blank">
+                    Verify Certificate
+                </a>
+            </p>
         </div>
     </div>
-</div>
 
-			<div class="row mt-4">
-    <!-- Second row with 2 columns -->
-        <div class="col-md-6">
+    <div class="col-md-4">
+        <div class="resume-wrap ftco-animate">
+            <span class="date">July 29, 2025</span>
+            <h2>Microsoft Power BI Data Analyst</h2>
+            <span class="position">Coursera</span>
+            <p class="mt-4">
+                <a href="https://www.coursera.org/account/accomplishments/professional-cert/RAKY2G73XR1L" target="_blank">
+                    Verify Certificate
+                </a>
+            </p>
+        </div>
+    </div>
+
+    <div class="col-md-4">
         <div class="resume-wrap ftco-animate">
             <span class="date">July 2021 - March 2022</span>
             <h2>Certified Specialist in Data Science &amp; Analytics</h2>
@@ -409,7 +409,11 @@
             <p class="mt-4">100% scholarship from K-DISC</p>
         </div>
     </div>
+
 </div>
+
+<!-- ROW 2 : 2 items -->
+<div class="row mt-4">
 
     <div class="col-md-6">
         <div class="resume-wrap ftco-animate">
@@ -419,6 +423,7 @@
             <p class="mt-4">CGPA: 8.2</p>
         </div>
     </div>
+
     <div class="col-md-6">
         <div class="resume-wrap ftco-animate">
             <span class="date">June 2005 - May 2009</span>
@@ -427,6 +432,7 @@
             <p class="mt-4">CGPA: 8.1</p>
         </div>
     </div>
+
 </div>
 
 
