--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@
 		<!-- ROW 1 : 3 items -->
 <div class="row mt-4">
 
-    <div class="col-md-4">
-        <div class="resume-wrap ftco-animate">
+    <div class="col-md-4 d-flex align-items-stretch">
+        <div class="resume-wrap ftco-animate h-100">
             <span class="date">January 14, 2026</span>
             <h2>Microsoft Certified: Data Analyst Associate (PL 300)</h2>
             <span class="position">Microsoft</span>
@@ -388,8 +388,8 @@
         </div>
     </div>
 
-    <div class="col-md-4">
-        <div class="resume-wrap ftco-animate">
+    <div class="col-md-4 d-flex align-items-stretch">
+        <div class="resume-wrap ftco-animate h-100">
             <span class="date">July 29, 2025</span>
             <h2>Microsoft Power BI Data Analyst</h2>
             <span class="position">Coursera</span>
@@ -401,8 +401,8 @@
         </div>
     </div>
 
-    <div class="col-md-4">
-        <div class="resume-wrap ftco-animate">
+    <div class="col-md-4 d-flex align-items-stretch">
+        <div class="resume-wrap ftco-animate h-100">
             <span class="date">July 2021 - March 2022</span>
             <h2>Certified Specialist in Data Science &amp; Analytics</h2>
             <span class="position">ICT Academy of Kerala</span>
@@ -413,10 +413,10 @@
 </div>
 
 <!-- ROW 2 : 2 items -->
-<div class="row mt-4">
+<div class="row mt-4 justify-content-center">
 
-    <div class="col-md-6">
-        <div class="resume-wrap ftco-animate">
+    <div class="col-md-6 d-flex align-items-stretch">
+        <div class="resume-wrap ftco-animate h-100">
             <span class="date">June 2009 - April 2011</span>
             <h2>M.Tech in Applied Electronics</h2>
             <span class="position">Karunya University, Coimbatore, India</span>
@@ -424,16 +424,11 @@
         </div>
     </div>
 
-    <div class="col-md-6">
-        <div class="resume-wrap ftco-animate">
+    <div class="col-md-6 d-flex align-items-stretch">
+        <div class="resume-wrap ftco-animate h-100">
             <span class="date">June 2005 - May 2009</span>
             <h2>Bachelor's Degree in Electronics &amp; Communication Engineering (AMIE)</h2>
-            <span class="position">Institution of Engineers (India)</span>
-            <p class="mt-4">CGPA: 8.1</p>
-        </div>
-    </div>
-
-</div>
+            <span class="positi
 
 
 		    		<div class="row justify-content-center mt-5">
