--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
     <div class="col-md-4 d-flex align-items-stretch">
         <div class="resume-wrap ftco-animate h-100">
             <span class="date">January 14, 2026</span>
-            <h2>Microsoft Certified: Data Analyst Associate (PL 300)</h2>
+            <h2>Microsoft Certified: Power BI Data Analyst Associate (PL 300)</h2>
             <span class="position">Microsoft</span>
             <p class="mt-4">
                 <a href="https://learn.microsoft.com/api/credentials/share/en-us/SUMISHAJAHAN-0344/E893443AAA4C16F3" target="_blank">
