--- a/index.html
+++ b/index.html
@@ -428,7 +428,10 @@
         <div class="resume-wrap ftco-animate h-100">
             <span class="date">June 2005 - May 2009</span>
             <h2>Bachelor's Degree in Electronics &amp; Communication Engineering (AMIE)</h2>
-            <span class="positi
+            <span class="position">Institution of Engineers (India)</span>
+            <p class="mt-4">CGPA: 8.1</p>
+        </div>
+    </div>
 
 
 		    		<div class="row justify-content-center mt-5">
